--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"description": "Backend project for ilmo 1.0",
 	"main": "src/app.js",
 	"devDependencies": {
-		"prisma": "^6.15.0",
+		"prisma": "6.15.0",
 		"typescript": "^5.9.2"
 	},
 	"repository": {
