--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"dependencies": {
 		"@prisma/client": "6.15.0",
 		"@types/node": "^24.0.3",
-		"fastify": "^5.5.0"
+		"fastify": "^5.5.0",
+		"zod": "^4.1.5"
 	},
 	"scripts": {
 		"dev": "node dist/server.js",
