--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
   "include": ["src"]
 }
