--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "target": "ES2020",
+    "noEmit": false,
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
 }
