--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"@prisma/client": "6.15.0",
 		"@types/node": "^24.0.3",
 		"fastify": "^5.5.0",
+		"supertokens-node": "^23.0.1",
 		"zod": "^4.1.5"
 	},
 	"scripts": {
