--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"@prisma/client": "6.15.0",
 		"@types/node": "^24.0.3",
+		"dotenv": "^17.2.3",
 		"fastify": "^5.5.0",
 		"supertokens-node": "^23.0.1",
 		"zod": "^4.1.5"
